--- a/super/super.html
+++ b/super/super.html
@@ -89,7 +89,7 @@
    <br>
    -typeof returns the datatype of a value/datatype 
    <br>
-<h4>STRUCTURED DATATYPES</h4>
+<h4>STRUCTURED DATA-TYPES</h4>
 <li>Objective</li>
 <li>Functions </li>
   <br>
@@ -239,16 +239,16 @@ Block scope : can access the function.
     <td>Truthy</td>
   </tr>
   <tr>
-    <td>Falsey </td>
+    <td>Falsy </td>
     <td>Truthy</td>
     <td>Right side</td>
     <td>Truthy</td>
   </tr>
   <tr>
-  <td>Falsey</td>
-  <td>Falsey</td>
+  <td>Falsy</td>
+  <td>Falsy</td>
   <td>Right side</td>
-  <td>Falsey</td>
+  <td>Falsy</td>
 </tr>
  </table>
 
@@ -256,8 +256,8 @@ Block scope : can access the function.
  <b>NOTE:: 
  1. If the left-side expression is truthy, the right-side expression doesn't matter at all. The ||
  operator returns the left side's truthy value and completes.
- 2. If the left-side expression is falsey, the || operator returns the right side's value (regardless
- of whether it's truthy or falsey) and completes</b>
+ 2. If the left-side expression is falsy, the || operator returns the right side's value (regardless
+ of whether it's truthy or falsy) and completes</b>
 
 </div>
 <br>
@@ -419,7 +419,6 @@ To clear the all the items
 
 </p>
 
-
   <button>hello</button>
   <button class="js-second-button">Second button </button>
 
@@ -430,7 +429,8 @@ To clear the all the items
   <ol>
     <li>How do you remove the bullet in an li element? </li>
     <li>How can i make using switch easy?</li>
-    <li> How do you underline the words or headings? </li>
+    <li>How do you underline the words or headings? </li>
+    <li>How to have the products where we can display or select each product one by one or select all the products to manipulate: use object? </li>
   </ol>
  </div>
 
