--- a/super/lesson.html
+++ b/super/lesson.html
@@ -7,22 +7,43 @@
 </head>
 <body>
   <h1>LESSONS</h1>
-  <h2>Lesson 1: </h2>
-  <h3>Order of operations </h3>
+  <h2>Lesson 2 : NUMBERS AND MATH </h2>
+  <B>Order of operations </B>
   <p>BODMAS:It's starts from the Brackets, Division, Multiplication, Addition and Subtractions
-    
-  <br> 
+    <br>
+    <br> 
     (20.95 + 7.99 *2)*0.1  = 3.693
-    
-    <h3>Weird behavior of Maths in Javascript</h3>
+  <h3>Weird behavior of Maths in Javascript</h3>
     2,3,4 = Integers 
+    <br>
     2.2, 2.5 = floating numbers/ floats
+<br>
+    <b>Computers can only store 0 and 1. while humans can store = 0-9 numbers</b></p>
 
-    <b>Computers can only store 0 and 1. while humans can store = 0-9 numbers</b>
+<h2>Lesson 3: STRINGS</h2>
+<p><b>String = Text</b>
+  <br>
+  'some'+ 'more'+ 'text' this is called <b>concatenation ; breaking down a string </b>
+  typeof(2) = number 
+  typeof('some') = string
+
+  'hello' + 2 = string = hello2 java converts number to a string. which is a <b>Type coercion</b> 
+
+  <B>Strings also follow the order of operations just like numbers, thus we use BRACKETS</B>
+  '$' + (2095 + 799)/100 = $28.94. 
+  
+  <b>Escape characters \ used to allow characters like ('),  \" = am not sure  \n = newline </b>
+  <br>
+  strings = "strings" , '', 
+  <br> `interpolation` = ` ${2+2}: used to add values ` 
   
 
 
-  </p>
+
+
+</p>
+
+
 
   <br>
   <h2>Lesson 4: html/css/js recap </h2> 
