--- a/super/super.html
+++ b/super/super.html
@@ -26,6 +26,23 @@
 </div>
 <br>
 <div class="cs-four" ><h2>LESSON 4:  html/css/javaScript recap</h2>
+
+  <p>
+    html: hypertext markup language <br>
+    css: cascading style sheet <br>
+    javascript: 
+
+    <style> 
+    button {
+    background-color:aquamarine;
+    }
+    </style>
+
+    <p>background-color = <b>css property,</b>  what we are going to change, 
+    red = <b>css value</b>, what we are changing it too. 
+
+    <button class="button1">class = "button" is an <b>HTML attribute </b></button>
+    </p> 
    <h2>Example</h2>
 
   <h3> T-shirts has a h3 heading element</h3>
