--- a/super/super.html
+++ b/super/super.html
@@ -54,8 +54,7 @@
 
 </div>
 <br>
-<div class="cs-five"><h2>LESSON 5:</h2>
-<h2>VARIABLES AND DATA TYPES </h2>
+<div class="cs-five"><h2>LESSON 5:VARIABLES AND DATA TYPES </h2>
   
 <p> <b>VARIABLE:</b> is a container that contains or stores the values <br>
     We use <b>const, let, var to declare and assign a variable.</b>
