--- a/super/variable.html
+++ b/super/variable.html
@@ -6,21 +6,37 @@
   <title>Cart Quantity</title>
 </head>
 <body>
-   <h2>Cart Quantity</h2>
+   <h1>CART QUANTITY</h1>
 
      <p>
-    <button onclick="ShowQuantity()">Show Quantity</button>
-    <button onclick="AddCart(1)">Add to Cart</button>
+    <button onclick="ShowQuantity()">Show quantity</button>
+
+    <button onclick="AddCart(1)">Add to cart</button>
     <button onclick="AddCart(2)">+2</button>
     <button onclick="AddCart(3)">+3</button>
     
-    <button onclick="AddCart(-1)">Remove from Cart</button>
+    <button onclick="AddCart(-1)">Remove from cart</button>
     <button onclick="AddCart(-3)">-3</button>
-    <button onclick="ShowQuantity(0)">Reset Cart</button>
+
+    <button onclick="ShowQuantity(0)">Reset cart</button>
 
   </p>
+  
+  <br><br>
+  <h1>CALCULATOR</h1>
+
+  <button onclick ="calculation +='1'">1</button>
+  <button onclick="calculation +='2'">2</button>
+  <button onclick="calculation +='3'">3</button>
+  <button onclick="calculation = ' + '; ">+</button>
+  <button onclick="calculation = eval(calculation)
+  console.log(calculation)">=</button>
+  <button onclick="calculation = 0">Reset button</button>
 
 
 </body>
-<script src="variable.js"></script>
+<script>
+  let calculation = ''; 
+</script>
+<!-- <script src="variable.js"></script> -->
 </html>
