--- a/super/super.html
+++ b/super/super.html
@@ -118,8 +118,8 @@
   <h2> LESSON 6:BOOLEANS AND IF STATEMENTS </h2>
 
   <h3> BOOLEANS</h3>
-  <p><b>Booleans</b>-checks if the condition/s or value is true or false;  
-    <br>
+  <p><b>Booleans</b>checks if the condition/s or value is true or false;  
+  <br>
   <br>
   <!-- comparison -->
   <h3>Comparison Operators</h3>
