--- a/super/variable.html
+++ b/super/variable.html
@@ -25,18 +25,22 @@
   <br><br>
   <h1>CALCULATOR</h1>
 
-  <button onclick ="calculation +='1'">1</button>
-  <button onclick="calculation +='2'">2</button>
-  <button onclick="calculation +='3'">3</button>
-  <button onclick="calculation = ' + '; ">+</button>
-  <button onclick="calculation = eval(calculation)
-  console.log(calculation)">=</button>
+  <button onclick="calculation +='1'; console.log(calculation)">1</button>
+  <button onclick="calculation +='2'; console.log(calculation)">2</button>
+  <button onclick="calculation +='3'; console.log(calculation)">3</button>
+  <button onclick="calculation += ' + '; console.log(calculation)">+</button>
+  <button onclick="calculation = eval( `${calculation}`)
+  console.log(`${calculation}`)" >=</button>
   <button onclick="calculation = 0">Reset button</button>
 
 
+  <!-- ROCK PAPER SCISSOR SHOOT  -->
+   <h1>ROCK PAPER SCISSORS </h1>
+
+   <button onclick="PlayTheGame('Rock')">Rock</button>
+   <button onclick="PlayTheGame('Paper')">Paper</button>
+   <button onclick="PlayTheGame('Scissors')">Scissors</button>
+
 </body>
-<script>
-  let calculation = ''; 
-</script>
-<!-- <script src="variable.js"></script> -->
+<script src="variable.js"></script>
 </html>
