--- a/super/variable.html
+++ b/super/variable.html
@@ -7,7 +7,6 @@
 </head>
 <body>
    <h1>CART QUANTITY</h1>
-
      <p>
     <button onclick="ShowQuantity()">Show quantity</button>
 
@@ -22,7 +21,6 @@
 
   </p>
   
-  <br><br>
   <h1>CALCULATOR</h1>
 
   <button onclick="calculation +='1'; console.log(calculation)">1</button>
@@ -40,6 +38,11 @@
    <button onclick="PlayTheGame('Rock')">Rock</button>
    <button onclick="PlayTheGame('Paper')">Paper</button>
    <button onclick="PlayTheGame('Scissors')">Scissors</button>
+
+
+   <h1>COIN FLIP</h1>
+
+   
 
 </body>
 <script src="variable.js"></script>
