--- a/super/variable.html
+++ b/super/variable.html
@@ -33,7 +33,9 @@
 
 
   <!-- ROCK PAPER SCISSOR SHOOT  -->
-   <h1>ROCK PAPER SCISSORS </h1>
+   <h1>ROCK, PAPER, SCISSORS GAME </h1>
+    <h2> <i>Rules of the Game</i></h2>
+    <p>Rock beats scissors, Paper beats rocks and Scissors beats paper.</p>
 
    <button onclick="PlayTheGame('Rock')">Rock</button>
    <button onclick="PlayTheGame('Paper')">Paper</button>
