parameters and functions

--- a/super/super.html
+++ b/super/super.html
@@ -221,10 +221,9 @@ The logical OR ( || ) operator also takes two expressions:
  There are three different ways the || operator can be evaluated:
 
 <h5>SCOPE :</h5>  
-
 1. Lexical
-2.Global scope: cannot access the functional scope 
-3.Functional scope :can access the global scope 
+2.Global scope: cannot access the functional/local scope; or variables inside a function
+3.Functional/local scope :can access the global scope 
 Block scope : can access the function.  
 
 </p>
@@ -447,6 +446,7 @@ To clear the all the items
     <li>How can i make using switch easy?</li>
     <li>How do you underline the words or headings? </li>
     <li>How to have the products where we can display or select each product one by one or select all the products to manipulate: use object? </li>
+    <li> // how to input the cost of items, that don't have the same amount.i think use an object, a while loop, to hold all the items. </li>
   </ol>
  </div>
 
