--- a/super/variable.html
+++ b/super/variable.html
@@ -23,12 +23,18 @@
   
   <h1>CALCULATOR</h1>
 
-  <button onclick="calculation +='1'; console.log(calculation)">1</button>
-  <button onclick="calculation +='2'; console.log(calculation)">2</button>
+  <button onclick="
+  Cal('1')"
+   >1</button>
+  <button onclick="Cal('2')">2</button>
   <button onclick="calculation +='3'; console.log(calculation)">3</button>
-  <button onclick="calculation += ' + '; console.log(calculation)">+</button>
-  <button onclick="calculation = eval( `${calculation}`)
-  console.log(`${calculation}`)" >=</button>
+  <button onclick="Cal(' + ')">+</button>
+
+  <button onclick="Cal(' = ')" >=</button>
+
+  <!-- <button onclick="calculation = eval( `${calculation}`)
+  console.log(`${calculation}`)" >=</button> -->
+
   <button onclick="calculation = 0">Reset button</button>
 
 
