--- a/super/variable.html
+++ b/super/variable.html
@@ -46,6 +46,21 @@
    <button onclick="PlayTheGame('Rock')">Rock</button>
    <button onclick="PlayTheGame('Paper')">Paper</button>
    <button onclick="PlayTheGame('Scissors')">Scissors</button>
+   <!-- reset the button// all score back to zero -->
+   <button onclick="
+   score.wins = 0;
+   score.losses = 0; 
+   score.ties =0; 
+   ">Reset Score</button>
+
+   <p> <b>Results:</b>
+    
+    <p class="js-results"></p>
+
+  
+  
+  </p>
+  
 
 
    <h1>COIN FLIP</h1>
