--- a/super/variable.html
+++ b/super/variable.html
@@ -66,6 +66,8 @@
 
 
    <h1>COIN FLIP</h1>
+   <button onclick="coinFlip('heads')">heads</button>
+   <button onclick="coinFlip('tails')">tails</button>
 
    
 
