--- a/super/Dom/09-dom.html
+++ b/super/Dom/09-dom.html
@@ -8,18 +8,18 @@
 <body> 
 </body>
 <h1>DOCUMENT OBJECT MODEL</h1>
-
 <p>The document object: represents or models the webpage</p>
 
 <h3>Properties and Methods of DOM</h3>
 <p>
 <ul> 
     <li>document: changes the content of document/website and it has properties and methods.</li>
+    <li><b>PROPERTIES</b></li>
     <li>document.title</li>
     <li>document.body</li>
     <li>document.body.innerHTML 
         <br> 
-        innerHTML = changes all the html code. 
+        innerHTML = changes all the html code.  
         <br>
     </li>
 </ul>
