--- a/super/super.html
+++ b/super/super.html
@@ -447,6 +447,7 @@ To clear the all the items
     <li>How do you underline the words or headings? </li>
     <li>How to have the products where we can display or select each product one by one or select all the products to manipulate: use object? </li>
     <li> // how to input the cost of items, that don't have the same amount.i think use an object, a while loop, to hold all the items. </li>
+    <li>DOM: How would i change/access other buttons</li>
   </ol>
  </div>
 
