--- a/super/variable.html
+++ b/super/variable.html
@@ -43,7 +43,8 @@
 
   <p class="roc_paper">
       <!-- ROCK PAPER SCISSOR SHOOT  -->
-    <h1>ROCK, PAPER, SCISSORS GAME </h1>
+    <h1>FUNCTIONS </h1>
+    <h2>ROCK, PAPER, SCISSORS GAME</h2>
     <h2> <i>Rules of the Game</i></h2>
     <p>Rock beats scissors, Paper beats rocks and Scissors beats paper.</p>
 
@@ -63,20 +64,28 @@
     <p class="js-results">  </p>
   </p>
   
-   
-
 <p class="js-coin_flip">
-  <h1>COIN FLIP</h1>
-   <button onclick="coinFlip('heads')">heads</button>
+  <h1>OBJECTS</h1>
+  <h2>COIN FLIP</h2>
+   <button   class="js-head" onclick="coinFlip('heads')">heads</button>
    <button onclick="coinFlip('tails')">tails</button>
-
 </p>
 
-<H2>DOM Manipulation</H2>
-<p class="js-dom">
-  
-</p>
-   
+<div>
+  <h1>DOM Manipulation</h1>
+<H2>YOUTUBE SUBSCRIBE BUTTON</H2>
+<button class="js-yubutton" onclick="button()">Subscribe</button>
+</div>
+
+<div>
+  <h2>Amazon Shipping Calculator</h2>
+  <p>Order under $40 =+ $10 shipping.</p>
+  <p>Order over $40 = Free shipping.</p>
+  <input placeholder="Cost of Order">
+  <button>Calculate</button>
+</div>
+
+
 </body>
 <script src="variable.js"></script>
 <script src="products.js"></script>
