--- a/Book/small.html
+++ b/Book/small.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Personal Library </h1>
+      <h1>Personal Library</h1>
     </header>
     <div class="container">
       <form id="bookform" >
@@ -32,9 +32,10 @@
         <br>
         <label for="pages">Pages</label>
         <input type="text" id="pages" name="pages">
-        <label for="year">Year</label>
+        <label for="year">Published Year</label>
         <input type="text" name="year" id="year">
         <br>
+        <!-- Change to add the books you have read. -->
         <button type="submit">Buy a Book</button>
       </form>
       <section>
